--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body{
+  background-color: #191919;
+}
 .App {
   text-align: center;
+  padding: 0 10rem 0 10rem;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pag-container{
+  margin: 5rem 0 1.5rem 0;
+  width: 100%;
+  height: 2.5rem;
+  list-style: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #191919;
+}
+.pag-container a {
+  padding: 0.4rem 1rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid #fff;
+  cursor: pointer;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.pag-container a:hover,.pag-activebtn a{
+  background-color: #fff;
+  color: #191919;
+}
+.main-table{
+  width: 100%;
+}
+table{
+  width: 100%;
+}
+.search-txt{
+  margin-top: 1.5rem;
+}
+.crypto-input{
+  width: 40%;
+  height: 3rem;
+  border-radius: 2rem;
+  padding: 1rem;
+  border: none;
+  margin-top: 2rem;
+}
+.crypto-input:focus{
+  outline: none;
+  box-shadow: 0 0 2px 2px #fff;
+}
+.heading-table{
+  background-color: #383838;
+  height: 3rem;
+  margin: 2rem 0 0.4rem 0;
+  padding: 0 1.5rem 0 1.5rem;
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+  font-size: 1rem;
+}
+.rank-pricing{
+  width: 20%;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.head-description{
+  width:40%;
+  border: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  .App{
+    padding: 0 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  .heading-table{
+   font-size: 0.7rem;
+    width: 100%;
+  }
+  .crypto-input{
+    width: 80%;
+    margin-bottom: 1rem;
+  }
+  .head-description{
+    width: 100%;
+    justify-content:flex-end;
+  }
+  .rank-pricing{
+    font-size: 0.6rem;
+  }.rank-pricing th{
+    margin-right: 0.4rem
+  }
+  .head-description th{
+    margin-left: 0.2rem;
+    font-size: 0.6rem;
+    
   }
 }
